﻿===== Hasor-MVC v0.0.4
* 改进:
    01.删除封装的log，采用slf4j。jdk自带的log因为采用了SystemClassLoader导致log失败。
    02.软件结构重新设计，吸收WebX的设计精华。
    03.MappingTo注解改为只能标记到Class上。
    04.AttributeParam、CookieParam、HeaderParam、PathParam、QueryParam、ReqParam。可以标记到字段和参数上。
    05.新增，Params 注解用于将多个请求参数包装到一个类中。
    06.一个类只能用于表述一个action。

===== Hasor-MVC v0.0.3
(无)

===== Hasor-MVC v0.0.2
* 新增:
    01.合并Hasor-MVC-Web项目。
* 改进:
    01.修正 RootController 修正其空指针异常问题，该问题是由于初始化时无任何mvc控制器而引发。
    02.修复 WebCallStrategy 类当请求参数为空的时候会导致空指针异常。
    03.更新代码以符合 RRUpdate 被删除的影响。
    04.更换LoggerHelper为日志输出组件。
    05.Around 组件删除。

===== Hasor-MVC v0.0.1
* 新增:
    01.迁移 controller、result 插件。
    02.增加 around 功能，用作 Action 拦截器。
    03.Hasor-MVC 可以在 非Web 环境下提供 MVC 功能。
    04.支持 Action 返回值自定义处理。